--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,25 +11,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Tugas3_View"
+        android:theme="@style/NoActionBar"
         tools:targetApi="31">
         <activity
             android:name=".soeharto"
             android:exported="false" />
         <activity
             android:name=".jokowi"
-            android:exported="false" />
-        <activity
-            android:name=".sby"
-            android:exported="false" />
-        <activity
-            android:name=".megawati"
-            android:exported="false" />
-        <activity
-            android:name=".gusdur"
-            android:exported="false" />
-        <activity
-            android:name=".habiebie"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
